--- a/数据库刷题笔记.md
+++ b/数据库刷题笔记.md
@@ -1,9 +1,74 @@
 #  数据库刷题笔记
 
-##  1757.可回收且低脂的产品
+##  查询
+
+###  1757.可回收且低脂的产品
 
 ```mysql
 select product_id from Products where low_fats = 'Y' and recyclable = 'Y'
 ```
 
 逆天的测评，第一遍提交说是超时了，看了答案结果一模一样，再交一次结果就过了
+
+
+
+###  584.寻找用户推荐人
+
+```mysql
+# Write your MySQL query statement below
+select name from Customer where referee_id != 2 or referee_id is null
+```
+
+select的基本结构还是没有忘记，这一题主要的点就在于提交`select name from Customer where referee_id != 2`的话是不会显示出referee_id为null的name的，判空操作要在后面加上`or referee_id is null`，注意一定是`is null`而不是`= null`，mysql对判空操作只有`is null`和`is not null`的语法，如果你写`= null`也是不会报错的
+
+
+
+###  595.大的国家
+
+```mysql
+# Write your MySQL query statement below
+select name, population, area from World where area >= 3000000 or population >= 25000000
+```
+
+这一题比较简单，就是注意题目中的条件只要满足其中一个就行了
+
+
+
+###  1148.文章浏览I
+
+```mysql
+# Write your MySQL query statement below
+select distinct author_id as id from Views where author_id = viewer_id order by id
+```
+
+想要达到去重的效果需要在select后面加上`distinct`，然后就是需要将author_id起别名成id重命名该列，否则不能通过，最后题目要求需要将id升序排列，就需要在最后面加上`order by id`，如果是让降序就写成`order by id desc`，写这个的时候不能忘了列名，自己写的时候漏了就报错了
+
+
+
+###  1683.无效的推文
+
+```mysql
+# 写法一：
+# Write your MySQL query statement below
+select tweet_id from Tweets where length(content) > 15
+
+# 写法二：
+# Write your MySQL query statement below
+select tweet_id from Tweets where char_length(content) > 15
+```
+
+这一题吧，重点是学习这个内置函数，求字符串的长度，有`length()`和`char_length()`，只要这两个函数知道了，那么这一题就完全没什么问题了
+
+
+
+##  连接
+
+###  1378.使用唯一标识码替换员工ID
+
+```MYSQL
+# Write your MySQL query statement below
+select EmployeeUNI.unique_id, Employees.name from Employees left join EmployeeUNI on Employees.id = EmployeeUNI.id
+```
+
+左外连接语法：`left join 表名 on ...`，这一题呢，我觉得Employees和EmployeeUNI的顺序很关键，如果是EmployeeUNI在前面的话是不会显示出unique_id为空的数据的。所以这一题的意思是将EmployeeUNI接在Employees的后面，怎么记忆呢？因为select紧接的是Employees表，所以Employees表是连接表的基准表
+
