--- a/9月刷题笔记.md
+++ b/9月刷题笔记.md
@@ -1560,7 +1560,7 @@ func maxSatisfied(customers []int, grumpy []int, minutes int) int {
 
 
 
-##  2841.几乎唯一子数组的最大和(滑动窗口)
+##  2841.几乎唯一子数组的最大和(定长滑动窗口)
 
 ```cpp
 class Solution {
@@ -1613,6 +1613,102 @@ func maxSum(nums []int, m int, k int) (ans int64) {
 ```
 
 这段代码不是一比一转换过来的，go代码是先循环前k-1个数，然后再对后面的数循环的，cpp代码是直接从头循环到尾。这一题也是差了一点点自己ac了，主要是差在了表达m个不同的数上，题解直接用的`cnt.size()`真的是妙中之妙啊，用了这么多的键、值，原来这里直接用size来表示不同元素的个数，天呐。正是因为这个，在退出元素更新哈希表cnt之后需要对其进行判空操作，如果为空了的话就需要它把这段内存空间删掉，也就是`cnt.erase(out)`，不然`cnt.size()`只会越来越大导致出错
+
+
+
+##  2461.长度为k子数组中的最大和(定长滑动窗口)
+
+```cpp
+class Solution {
+public:
+    long long maximumSubarraySum(vector<int>& nums, int k) {
+        unordered_map<int, int> cnt;
+        long long ans = 0, sum = 0;
+        for(int i = 0; i < nums.size(); i++) {
+            sum += nums[i];
+            cnt[nums[i]]++;
+            if(i < k-1) continue;
+            if(cnt.size() == k) ans = max(ans, sum);
+            int out = nums[i-k+1];
+            sum -= out;
+            if(--cnt[out] == 0) cnt.erase(out);
+        }
+        return ans;
+    }
+};
+```
+
+
+
+```go
+func maximumSubarraySum(nums []int, k int) int64 {
+    ans, sum := int64(0), int64(0)
+    cnt := map[int]int{}
+    for i, x := range nums {
+        sum += int64(x)
+        cnt[x]++
+        if i < k-1 {
+            continue
+        }
+        if len(cnt) == k {
+            ans = max(ans, sum)
+        }
+        out := nums[i-k+1]
+        sum -= int64(out)
+        cnt[out]--
+        if cnt[out] == 0 {
+            delete(cnt, out)
+        }
+    }
+    return ans
+}
+```
+
+和昨天做的那一题很像！主要是要会用哈希表cnt，除了要满足滑动窗口的大小之外还需要满足k个不同的元素，这里还是用`cnt.size()`来表示
+
+
+
+##  1423.可获得的最大点数(定长滑动窗口)
+
+```cpp
+class Solution {
+public:
+    int maxScore(vector<int>& cardPoints, int k) {
+        int n = cardPoints.size();
+        int r = n, sum = reduce(cardPoints.begin()+r-k, cardPoints.begin()+r), ans = 0;
+        //cout << reduce(cardPoints.begin(), cardPoints.end())-96 << sum;
+        if(n == k) return sum;
+        while(r%n < k) {
+            ans = max(ans, sum);
+            sum += cardPoints[r%n]-cardPoints[(r-k)%n];
+            r++;
+        }
+        //cout << r;
+        int t = reduce(cardPoints.begin()+(r-k)%n, cardPoints.begin()+r%n);
+        return max(ans, t);
+    }
+};
+```
+
+顺利地自己ac了这道题，但是感觉有点不普遍性，最开始没有int t那一行还有4个样例不能通过，经过自己的debug应该就是最后一次没有参与循环，我感觉是边界的问题，加上这最后一步也是顺利解决了，但是看了一眼题解和他们的代码好像差别挺大的哈哈哈，这一题我主要是联想到了1652.拆炸弹的问题，以最后一个元素为右边界的长度为k的滑动窗口往前移动，然后就是找准边界r%n<k，退出循环即可。明白了，我其实是灵神的代码的反方向，还不错！
+
+
+
+```cpp
+class Solution {
+public:
+    int maxScore(vector<int>& cardPoints, int k) {
+        int sum = reduce(cardPoints.begin(), cardPoints.begin()+k), ans = sum;
+        for(int i = 1; i <= k; i++) {
+            sum += cardPoints[cardPoints.size()-i]-cardPoints[k-i];
+            ans = max(ans, sum);
+        }
+        return ans;
+    }
+};
+```
+
+灵神的题解主要是没有用到循环数组，他这个是巧妙运用了下标之间的关系来表示出入元素的，实在是简洁！
 
 
 
