--- a/数据库刷题笔记.md
+++ b/数据库刷题笔记.md
@@ -72,3 +72,34 @@ select EmployeeUNI.unique_id, Employees.name from Employees left join EmployeeUN
 
 左外连接语法：`left join 表名 on ...`，这一题呢，我觉得Employees和EmployeeUNI的顺序很关键，如果是EmployeeUNI在前面的话是不会显示出unique_id为空的数据的。所以这一题的意思是将EmployeeUNI接在Employees的后面，怎么记忆呢？因为select紧接的是Employees表，所以Employees表是连接表的基准表
 
+
+
+###  1068.产品销售分析I
+
+写法一：
+
+```mysql
+# Write your MySQL query statement below
+select p.product_name, s.year, s.price from Product p, Sales s where p.product_id = s.product_id
+```
+
+写法二：
+
+```mysql
+# Write your MySQL query statement below
+select p.product_name, s.year, s.price from Sales s left join Product p on p.product_id = s.product_id
+```
+
+写法一是自己ac的，写法二是题解区写的左外连接，当然，左外连接表的顺序还是不能够颠倒的，颠倒的话会导致结果不正确，因为题干中给的示例输出是有重复的product_name
+
+
+
+###  进店却未进行过交易的顾客
+
+```mysql
+# Write your MySQL query statement below
+select customer_id, count(customer_id) count_no_trans from Visits v left join Transactions t on v.visit_id = t.visit_id where transaction_id is null group by customer_id
+```
+
+这一题复习到的东西还挺多，`count()`函数，`group by + 列名`语法，count函数就是用来求列的元素的个数的，group by 列的意思就是按照那个列来分组展示。这一题其实还不是很好想出来的，主要是需要发现这个题要解出来其实是要找到`transaction_id is null`这个特点
+
