--- a/9月刷题笔记.md
+++ b/9月刷题笔记.md
@@ -1712,6 +1712,110 @@ public:
 
 
 
+##  2390.从字符串中移除星号(栈)
+
+```cpp
+class Solution {
+public:
+    string removeStars(string s) {
+        string ans = "";
+        for(char c : s) {
+            if(c == '*') ans.pop_back();
+            else ans.push_back(c);
+        }
+        return ans;
+    }
+};
+```
+
+
+
+```go
+func removeStars(s string) string {
+    ans := []byte{}
+    for _, c := range s {
+        if c == '*' {
+            ans = ans[:len(ans)-1]
+        } else {
+            ans = append(ans, byte(c))
+        }
+    }
+    return string(ans)
+}
+```
+
+典型的栈类型的邻项消除题目
+
+
+
+##  3.无重复字符的最长子串(不定长滑动窗口)
+
+```cpp
+class Solution {
+public:
+    int lengthOfLongestSubstring(string s) {
+        int l = 0, ans = 0;
+        unordered_set<char> window;
+        for(int r = 0; r < s.size(); r++) {
+            while(window.count(s[r])) window.erase(s[l++]);
+            window.insert(s[r]);
+            ans = max(ans, r-l+1);
+        }
+        return ans;
+    }
+};
+```
+
+从最开始入门的时候一点看不懂题解，到现在来看好像也就那么一回事，其实好像并没有那么难吧。这里使用`unordered_set容器`，要比map好用且简洁一点，但是set容器是不能有`window[s[r]]++`这种操作的，只能用内置的insert函数，复习一下set的几个函数`插入：：insert() 删除：erase() 个数/是否存在：count()`
+
+
+
+##  3090.每个字符最多出现两次的最长子字符串(不定长)
+
+```cpp
+class Solution {
+public:
+    int maximumLengthSubstring(string s) {
+        int ans = 0, l = 0;
+        unordered_map<int, int> cnt;
+        for(int r = 0; r < s.size(); r++) {
+            cnt[s[r]-'0']++;
+            while(cnt[s[r]-'0'] > 2) cnt[s[l++]-'0']--;
+            ans = max(ans, r-l+1);
+        }
+        return ans;
+    }
+};
+```
+
+
+
+```go
+func maximumLengthSubstring(s string) int {
+    cnt := make([]int, 26)
+    ans := 0
+    l := 0
+    for i, b := range s {
+        b -= 'a'
+        cnt[b]++
+        for cnt[b] > 2 {
+            cnt[s[l]-'a']--
+            l++
+        }
+        ans = max(ans, i-l+1)
+    }
+    return ans
+}
+```
+
+和上一题基本上是一样的，就是条件变成了小于等于2了
+
+
+
+
+
+
+
 
 
 
@@ -1754,7 +1858,7 @@ for(auto ... : ...) {
 
 ###  滑动窗口模板
 
-**未知窗口大小求窗口大小**
+**未知窗口大小求窗口大小---不定长滑动窗口**
 
 ```cpp
 int solve(string answerKey) {
