--- a/9月刷题笔记.md
+++ b/9月刷题笔记.md
@@ -1814,6 +1814,71 @@ func maximumLengthSubstring(s string) int {
 
 
 
+##  1493.删掉一个元素以后全为1的最长子数组(不定长)
+
+```cpp
+class Solution {
+public:
+    int longestSubarray(vector<int>& nums) {
+        int ans = 0, cnt[2]{}, l = 0;
+        for(int r = 0; r < nums.size(); r++) {
+            cnt[nums[r]]++;
+            while(cnt[0] > 1) cnt[nums[l++]]--;
+            ans = max(ans, r-l);
+        }
+        return ans;
+    }
+};
+```
+
+感觉没做出来就是差在了哈希表的使用上，这里由于nums仅是一个二进制数组，所以只有两个元素，这里就使用的是哈希数组来计数。
+
+
+
+##  1208.尽可能使字符串相等(不定长)
+
+```cpp
+class Solution {
+public:
+    int equalSubstring(string s, string t, int maxCost) {
+        int cnt = 0, cost = 0, ans = 0, l = 0;
+        for(int r = 0; r < s.size(); r++) {
+            cost += abs(s[r]-t[r]);
+            cnt++;
+            if(cost > maxCost) {
+                cost -= abs(s[l]-t[l]);
+                l++;
+                cnt--;
+            }
+            ans = max(ans, cnt);
+        }
+        return ans;
+    }
+};
+```
+
+与前面的题基本上没有什么差别，就是多了一个计数器cnt来记录修改的字符串个数，其它还是按照模板套入进去就行了
+
+
+
+##  1184.公交站间的距离(数组)
+
+```cpp
+class Solution {
+public:
+    int distanceBetweenBusStops(vector<int>& distance, int start, int destination) {
+        int sum = reduce(distance.begin(), distance.end()), ans = 0;
+        if(start > destination) swap(start, destination);
+        for(int i = start; i < destination; i++) ans += distance[i];
+        return min(ans, sum-ans);
+    }
+};
+```
+
+wa了一发，没有注意到start可以小于destination，所以在循环之前判断一下大小，如果start要小的话就交换一下
+
+
+
 
 
 
