--- a/练习赛合集.md
+++ b/练习赛合集.md
@@ -645,6 +645,43 @@ func findMaximumScore(nums []int) (ans int64) {
 
 
 
+###  双周赛139
+
+####  3286.穿越网格图的安全路径(01bfs)
+
+```cpp
+class Solution {
+public:
+    bool findSafeWalk(vector<vector<int>>& grid, int health) {
+        int m = grid.size(), n = grid[0].size();
+        int dirs[][2] = {{-1, 0}, {0, -1}, {1, 0}, {0, 1}};
+        vector<vector<int>> dis(m, vector<int>(n, INT_MAX));
+        deque<pair<int, int>> q;
+        q.emplace_front(0, 0);
+        dis[0][0] = grid[0][0];
+        while(!q.empty()) {
+            auto [i, j] = q.front();
+            q.pop_front();
+            for(auto& [dx, dy] : dirs) {
+                int x = i+dx, y = j+dy;
+                if(0 <= x && x < m && 0 <= y && y < n) {
+                    int g = grid[x][y];
+                    if(dis[i][j] + g < dis[x][y]) {
+                        dis[x][y] = dis[i][j]+g;
+                        g == 0 ? q.emplace_front(x, y) : q.emplace_back(x, y);
+                    }
+                }
+            }
+        }
+        return dis[m-1][n-1] < health;
+    }
+};
+```
+
+比赛的时候信誓旦旦一定能ac这一题，结果一直耗到了最后都没写出来，害得我又emo了一晚上，因为bfs的题最近刷过，结果还是做不出来，今天看完题解之后感觉人好多了，其实好像也并不算做过的题型，在灵神题单中这个题属于01bfs，也就是简单版的边权只有0和1的迪杰斯特拉。这里就用了双端队列deque来代替之前用的queue，用dist数组来维护这个最短路径，然后用dis[m-1] [n-1] < health来判断是否能够到达安全路径。原来没做过这种题型，还算是给了自己一点点安慰吧。比赛的过程中也是发现了一点是最里层的if语句有问题，一直想不出来如何写才能满足题意。比赛过程中确实考虑到是否要用visit数组，这一题是不需要的，因为这个边权不是全为1或者每个点只需要遍历一次，只有这种情况的时候才需要visit数组
+
+
+
 
 
 ##  牛客
@@ -1085,6 +1122,119 @@ void solve(){
 
 
 
+
+###  练习赛128
+
+####  A.Cidoa的幂次序列
+
+```cpp
+void solve(){
+	long long n, k;
+	cin >> n >> k;
+	cout << 2 << "\n";
+	cout << n-1 << " " << 1 << "\n"; 
+}
+```
+
+这种类型的题原来叫做构造啊，题干中没有给出可能有多种样例文件那种字样，搞得我都不会写了，果然签到题还是搞点特殊的就行了
+
+
+
+###  周赛60
+
+####  A.困难数学题
+
+```cpp
+void solve(){
+	int x;
+	cin >> x;
+    cout << 0;
+}
+```
+
+其实考察的就是异或运算的性质，一个数异或自己就是0了，然后这里是4个x相异或也就等价于两个0相异或了，然后最终答案也就是0了
+
+
+
+####  B.构造序列
+
+```cpp
+void solve(){
+	ll n, m;
+	cin >> n >> m;
+	cout << 2*min(n, m) + (n != m);
+}
+```
+
+这一题也就是仔细读题分类讨论就行了，最简洁的版本也就是这么写了，哪个多就以哪个为开头和结尾，然后两两配对，如果n不等于m的话就再加上一
+
+
+
+####  C.连点成线(维护最大最小)
+
+```cpp
+void solve(){
+	int n, m;
+	cin >> n >> m;
+	//行为x最大y 列为y最大x 行为x最小y 列为y最小x 
+	vector<ll> maxx(n+1, -INF), maxy(n+1, -INF), minx(n+1, INF), miny(n+1, INF);
+	for(int i = 1; i <= m; i++) {
+		ll x, y;
+		cin >> x >> y;
+		maxx[x] = max(maxx[x], y);
+		maxy[y] = max(maxy[y], x);
+		minx[x] = min(minx[x], y);
+		miny[y] = min(miny[y], x);
+	}
+	ll ans = 0;
+	for(int i = 1; i <= n; i++) {
+		if(maxx[i] != -INF) ans = max(ans, maxx[i]-minx[i]);
+		if(maxy[i] != -INF) ans = max(ans, maxy[i]-miny[i]);
+	}
+	cout << ans;
+}
+```
+
+这有点类似于枚举右维护左的思想，只不过是输入完之后全部维护好了再一次遍历整个棋盘维护答案
+
+
+
+####  D.我们n个真是太厉害了
+
+```cpp
+void solve(){
+	int n;
+	cin >> n;
+	vector<int> a(n);
+	for(auto& i : a) cin >> i;
+	sort(a.begin(), a.end());
+	ll sum = 0;
+	for(auto i : a) {
+		if(i > sum+1 && sum < n) {
+			cout << sum+1 << "\n";
+			return;
+		}
+		sum += i;
+	}
+	//最后一个数加完之后 
+	if(sum < n) {
+		cout << sum+1 << "\n";
+		return;
+	}
+	cout << "Cool!" << "\n";
+}
+```
+
+想的过程中也确实想不到什么好的办法来解这道题，最终还是落到数学了，这一方面感觉好差劲。题解的思路主要是通过数学的思维来解决这一题的，这里的sum代表的是上界，假设区间[0,sum]能够表示，这个时候来了一个整数a，如果它是大于sum+1且小于n的话那么就表名这是一个无法表示出来的最小整数，输出它并return就行，主要是要发现这个sum+1这个边界，只有当a小于等于sum+1的时候才能接上[0,sum]区间并更新右边界为sum+a。这里也是学到了这个人的编码风格了，这个输入方式可以学一学
+
+```cpp
+vector<int> a(n);
+for(auto& i : a) cin >> i;
+```
+
+
+
+看完题解只会这些了。。。这一次还好没打周赛吧，不然得掉分了。。。这一次感觉很数学！害！这数学真是个难点啊！首先是需要推导，然后还有组合数学什么之类的，这些都还没有系统刷过的。。。
 
 
 
