--- a/练习赛合集.md
+++ b/练习赛合集.md
@@ -682,6 +682,108 @@ public:
 
 
 
+###  周赛415
+
+####  3289.数字小镇中的捣蛋鬼(哈希表)
+
+```cpp
+class Solution {
+public:
+    vector<int> getSneakyNumbers(vector<int>& nums) {
+        set<int> hash;
+        vector<int> ans;
+        for(auto n : nums) {
+            if(hash.count(n)) {
+                ans.push_back(n);
+            }
+            hash.insert(n);
+        }
+        return ans;
+    }
+};
+```
+
+很容易想到用哈希表来记录已经出现过的数字，然后如果出现过就pushback到ans之后，不需要考虑顺序
+
+
+
+####  3290.最高乘法得分(记忆化搜索、动态规划)
+
+```cpp
+/*
+dfs(i, j)表示从b[0]到b[i]选j+1个数字和a[0]到a[j]算点积的最大值
+考虑b[i]选或不选
+- 不选b[i]
+dfs(i-1, j)
+
+- 选b[i]
+dfs(i-1, j-1)+b[i]*a[j]
+
+dfs(i, j) = max(dfs(i-1, j), dfs(i-1, j-1)+b[i]*a[j])
+*/
+
+class Solution {
+public:
+    long long maxScore(vector<int>& a, vector<int>& b) {
+        long long ans = 0;
+        int n = b.size();
+        vector<vector<long long>> memo(n, vector<long long>(4, LLONG_MIN));
+
+        auto dfs = [&](auto&& dfs, int i, int j) -> long long {
+            if(j < 0) return 0;
+            if(i < 0) return LLONG_MIN/2;   //防止溢出
+            long long& res = memo[i][j];
+            if(res != LLONG_MIN) return res;
+            return res = max(dfs(dfs, i-1, j), dfs(dfs, i-1, j-1)+(long long)b[i]*a[j]);
+        };
+        return dfs(dfs, n-1, 3);
+    }
+};
+```
+
+
+
+1比1转化成递推
+
+```cpp
+/*
+dfs(i, j)表示从b[0]到b[i]选j+1个数字和a[0]到a[j]算点积的最大值
+考虑b[i]选或不选
+- 不选b[i]
+dfs(i-1, j)
+
+- 选b[i]
+dfs(i-1, j-1)+b[i]*a[j]
+
+dfs(i, j) = max(dfs(i-1, j), dfs(i-1, j-1)+b[i]*a[j])
+
+dp[i+1][j+1] = max(dp[i][j+1], dp[i][j]+b[i]*a[i])
+dfs(i, -1) = 0 <---> dp[i][0] = 0
+dfs(-1, j) = LLONG_MIN/2 <---> dp[0][j] = LLONG_MIN/2
+*/
+
+class Solution {
+public:
+    long long maxScore(vector<int>& a, vector<int>& b) {
+        int n = b.size();
+        vector<vector<long long>> dp(n+1, vector<long long>(5));
+        for(int j = 1; j < 5; j++) dp[0][j] = LLONG_MIN/2;  //区间一定是[1, 5)
+        for(int i = 0; i < n; i++) {
+            for(int j = 0; j < 4; j++) {
+                dp[i+1][j+1] = max(dp[i][j+1], dp[i][j]+(long long)b[i]*a[j]);
+            }
+        }
+        return dp[n][4];
+    }
+};
+```
+
+看完记忆化搜索的题解之后好像越来越有感觉了，至少看完视频思路还是很清晰的没有什么卡壳的点，唯一需要注意的是longlong的初始化注意一下别越界。然后就是转化成递推的时候开辟的dp数组大小一定要加一（当然是能判断下标会出现负数越界的情况），然后就是初始化也需要细心，这取决于记忆化搜索的退出条件，根据记忆化搜索的代码仔细转化成递推很重要，虽然是机械的没有什么技巧的，但是也很容易犯错！
+
+
+
+
+
 
 
 ##  牛客
