--- a/9月刷题笔记.md
+++ b/9月刷题笔记.md
@@ -2184,6 +2184,154 @@ public:
 
 
 
+##  2414.最长字母连续子字符串的长度(快慢指针)
+
+```cpp
+class Solution {
+public:
+    int longestContinuousSubstring(string s) {
+        int l = 0, ans = 1, n = s.size();
+        for(int r = 1; r < n; r++) {
+            if(s[r]-s[r-1] != 1) l = r;
+            ans = max(ans, r-l+1);
+        }
+        return ans;
+    }
+};
+```
+
+
+
+```go
+func longestContinuousSubstring(s string) int {
+    ans, l, n := 1, 0, len(s)
+    for r := 1; r < n; r++ {
+        if s[r]-s[r-1] != 1 {
+            l = r
+        }
+        ans = max(ans, r-l+1)
+    }
+    return ans
+}
+```
+
+连续做了几天的滑动窗口题目，这一题可以说是快速判断解法并ac了，有点类似于滑动窗口求窗口长度，但是又有点像快慢指针，总之刷题效果还是达到了！
+
+
+
+##  1004.最大连续1的个数III(不定长)
+
+```cpp
+class Solution {
+public:
+    int longestOnes(vector<int>& nums, int k) {
+        int cnt[2]{}, l = 0, ans = 0;
+        for(int r = 0; r < nums.size(); r++) {
+            cnt[nums[r]]++;
+            while(cnt[0] > k) cnt[nums[l++]]--;
+            ans = max(ans, r-l+1);
+        }
+        return ans;
+    }
+};
+```
+
+
+
+```go
+func longestOnes(nums []int, k int) int {
+    cnt := [2]int{}
+    ans, l := 0, 0
+    for r := range nums {
+        cnt[nums[r]]++
+        for cnt[0] > k {
+            cnt[nums[l]]--
+            l++
+        }
+        ans = max(ans, r-l+1)
+    }
+    return ans
+}
+```
+
+用哈希数组cnt来计数n和1的个数，当cnt[0]>k时需要改变窗口左边界的大小
+
+
+
+##  1658.将x减到0的最小操作数(不定长、正难则反)
+
+```cpp
+class Solution {
+public:
+    int minOperations(vector<int>& nums, int x) {
+        int target = reduce(nums.begin(), nums.end())-x;
+        if(target < 0) return -1;
+        int ans = -1, n = nums.size(), l = 0, sum = 0;
+        for(int r = 0; r < n; r++) {
+            sum += nums[r];
+            while(sum > target) sum -= nums[l++];
+            if(sum == target) ans = max(ans, r-l+1);
+        }
+        return ans < 0 ? -1 : n-ans;
+    }
+};
+```
+
+
+
+```go
+func minOperations(nums []int, x int) int {
+    target := 0
+    for _, val := range nums {
+        target += val
+    }
+    target -= x
+    if target < 0 {
+        return -1
+    }
+    ans, l, n, sum := -1, 0, len(nums), 0
+    for r, val := range nums {
+        sum += val
+        for sum > target {
+            sum -= nums[l]
+            l++
+        }
+        if sum == target {
+            ans = max(ans, r-l+1)
+        }
+    }
+    if ans < 0 {
+        return -1
+    } else {
+        return n-ans
+    }
+}
+```
+
+自己的思路是用循环数组来写，但是发现想不出窗口的起点应该在哪里，所以还是看了提示。读了一下提示的英文大概意思就是求最大满足target的数组长度，然后用数组长度减去这个长度就是最终求得的最小长度，也就是操作数，正难则反这个思路确实很重要！然后就是在这一题中也要注意这个x的范围，它是有可能大于nums[i]的，所以在遍历前如果target<0的话直接返回-1，如果不这样写的话可能会导致下标l越界，当时自己写的时候改了好久才发现，下面是自己ac的代码：
+
+```cpp
+class Solution {
+public:
+    int minOperations(vector<int>& nums, int x) {
+        int sum = reduce(nums.begin(), nums.end())-x;
+        //cout << sum;
+        int l = 0, ans = 0, t = 0, n = nums.size(), flag = 0;
+        for(int r = 0; r < nums.size(); r++) {
+            t += nums[r];
+            while(t > sum && l <= r) t-= nums[l++];
+            if(t == sum) ans = max(ans, r-l+1), flag = 1;
+        }
+        if(ans == 0 && flag == 1) return n;
+        return n-ans == n? -1 : n-ans;
+    }
+};
+```
+
+
+
+
+
 
 
 
@@ -2292,3 +2440,9 @@ vector<int> maxSlidingWindow(vector<int>& nums, int k) {
 ###  子序列长度问题转化成子数组长度(排序)
 
 这来源于刷滑动窗口题单中出现的一个有意思的题目，题目中求的是某个条件下子序列的最大长度，但是通过对数组观察之后其实答案并没有顺序上的限定，所以当数组排序完之后就变成了求最长子数组的长度问题了，只能说这个问题转化十分巧妙，详情见2779.数组的最大美丽值
+
+
+
+###  正难则反
+
+这算是一个思考题目的策略吧，以1685为例，要求的是操作最小次数，问题可以转换成求和为target的最大子数组长度，然后用n减去这个长度就是最小操作次数。这种方法出现的情景可能比较少，主要是需要可行性的判断，在正面没有思路的时候就可以试试反面去想，也类似于遇事不决先排序吧，先判断一下是否能排序，如果能的话就先排序试试，说不定第一步就是需要排序的
