--- a/9月刷题笔记.md
+++ b/9月刷题笔记.md
@@ -2332,6 +2332,57 @@ public:
 
 
 
+##  2516.每种字符至少取k个(正难则反、滑动窗口)
+
+```cpp
+class Solution {
+public:
+    int takeCharacters(string s, int k) {
+        //'a' == 97
+        int cnt[3]{};
+        for(char c : s) cnt[c-'a']++;
+        if(min(cnt[0], k)+min(cnt[1], k)+min(cnt[2], k) < 3*k) return -1;   //这里是和k取min而不是2，第一遍写的是2
+        int n = s.size();
+        int l = 0, ans = -1;
+        cnt[0] -= k, cnt[1] -= k, cnt[2] -= k;
+        for(int r = 0; r < n; r++) {
+            cnt[s[r]-'a']--;
+            while(cnt[0] < 0 || cnt[1] < 0 || cnt[2] < 0) cnt[s[l++]-'a']++;
+            ans = max(ans, r-l+1);
+        }
+        return n-ans;
+    }
+};
+```
+
+自己独立ac了这道题！虽然有点点小错误在于取min的时候最开始k写成了示例的2导致wa了一发
+
+
+
+##  209.长度最小的子数组(不定长)
+
+```cpp
+class Solution {
+public:
+    int minSubArrayLen(int target, vector<int>& nums) {
+        int n = nums.size();
+        int ans = n+1, l = 0, sum = 0;
+        for(int r = 0; r < n; r++) {
+            sum += nums[r];
+            while(sum >= target) {
+                ans = min(ans, r-l+1);
+                sum -= nums[l++];
+            }
+        }
+        return ans == n+1 ? 0 : ans;
+    }
+};
+```
+
+题目要求总和大于等于...没看清题我真的服了。与以往不同的是这个ans更新答案在while循环体内，而且这一句一定要在缩小左边界之前，否则结果不正确
+
+
+
 
 
 
