--- a/9月刷题笔记.md
+++ b/9月刷题笔记.md
@@ -2379,9 +2379,314 @@ public:
 };
 ```
 
+
+
+```go
+func minSubArrayLen(target int, nums []int) int {
+    l, ans, sum := 0, len(nums)+1, 0
+    for r, x := range nums {
+        sum += x
+        for sum >= target {
+            ans = min(ans, r-l+1)
+            sum -= nums[l]
+            l++
+        }
+    }
+    if ans == len(nums)+1 {
+        return 0
+    }
+    return ans
+}
+```
+
 题目要求总和大于等于...没看清题我真的服了。与以往不同的是这个ans更新答案在while循环体内，而且这一句一定要在缩小左边界之前，否则结果不正确
 
 
+
+##  2374.边积分最高的节点(哈希、区分unorederd_map和map)
+
+```cpp
+class Solution {
+public:
+    int edgeScore(vector<int>& edges) {
+        map<int, long long> hash;
+        for(int i = 0; i < edges.size(); i++) {
+            hash[edges[i]] += i;
+        }
+        long long mx = -1, ans = -1;
+        for(auto& [i, label] : hash) {
+            cout << i;
+            if(label > mx) {
+                mx = max(mx, label);
+                ans = i;
+            }
+        }
+        //cout << hash[0] << hash[1];
+        return ans;
+    }
+};
+```
+
+这一题也是属于是知识漏洞了，wa了一发主要是因为没有开long long。另外一点就是`unordered_map`和`map`的区别了，前者通过哈希记录之后是不会保证键值是有序的，因为它的实现原理是哈希表，而对于map而言，它的实现原理是红黑树，他在每次操作后都会排序一次，所以用map进行哈希之后会保证键值是有序的。这一题要用哈希表解决就一定要保证哈希表的键值是有序的，这样才能保证返回的是编号最小的那个
+
+
+
+##  125.验证回文串(字符串)
+
+```cpp
+class Solution {
+public:
+    bool isPalindrome(string s) {
+        string ans = "";
+        for(char c : s) {
+            if(isalnum(c)) {
+                ans += tolower(c);
+            }
+        }
+        s = ans;
+        reverse(ans.begin(), ans.end());
+        return ans == s;
+    }
+};
+```
+
+本来是双指针的题，干脆借这个题来学一下关于string的api，对于string的一些api总是不清楚：
+
+- `slower(char c)` 是否为小写字母
+- `isupper(char c)` 是否为大写字母
+- `isdigit(char c)` 是否为数字
+- `isalpha(char c)` 是否为字母
+- `isalnum(char c)` 是否为字母或者数字
+- `toupper(char c)` 字母小转大
+- `tolower(char c)` 字母大转小
+
+
+
+##  1750.删除字符串两端相同字符后的最短长度(双指针)
+
+```cpp
+class Solution {
+public:
+    int minimumLength(string s) {
+        int l = 0, r = s.size()-1;
+        string ans = s;
+        while(l < r && s[l] == s[r]) {
+            char c = s[l];
+            while(l <= r && s[l] == c) l++;
+            while(l <= r && s[r] == c) r--;
+        }
+        return r-l+1;
+    }
+};
+```
+
+
+
+```go
+func minimumLength(s string) int {
+    l, r := 0, len(s)-1
+    for l < r && s[l] == s[r] {
+        c := s[l]
+        for l <= r && s[l] == c {
+            l++
+        }
+        for l <= r && s[r] == c {
+            r--
+        }
+    }
+    return r-l+1
+}
+```
+
+双指针第一题，很明显的题意，只能用双指针去扫。简便写法就是要设置一个标准，也就是`char c = s[l];`不然容易出现下标错误。双指针，目前容易遇到的错误就是死循环。
+
+
+
+##  2105.给植物浇水II(双指针、模拟)
+
+```cpp
+class Solution {
+public:
+    int minimumRefill(vector<int>& plants, int capacityA, int capacityB) {
+        int l = 0, r = plants.size()-1, ca = capacityA, cb = capacityB, ans = 0;
+        while(l < r) {
+            if(ca < plants[l]) {
+                ans++;
+                ca = capacityA;
+            }
+            ca -= plants[l++];
+            if(cb < plants[r]) {
+                ans++;
+                cb = capacityB;
+            }
+            cb -= plants[r--];
+        }
+        if(l == r && max(ca, cb) < plants[l]) ans++;
+        return ans;
+    }
+};
+```
+
+
+
+```go
+func minimumRefill(plants []int, capacityA int, capacityB int) int {
+    l, r, ca, cb, ans := 0, len(plants)-1, capacityA, capacityB, 0
+    for l < r {
+        if ca < plants[l] {
+            ans++
+            ca = capacityA
+        }
+        ca -= plants[l]
+        l++
+        if cb < plants[r] {
+            ans++
+            cb = capacityB
+        }
+        cb -= plants[r]
+        r--
+    }
+    if l == r && max(ca, cb) < plants[l] {
+        ans++
+    }
+    return ans
+}
+```
+
+唉，感觉没什么状态了，这感觉就是做阅读题，步骤完完全全告诉你怎么写了，也有可能是英语的问题吧，刚开始英文读题还是有点困难的，看完题解后知后觉是可以同步的，还得练还得练！
+
+
+
+##  977.有序数组的平方(双指针)
+
+```cpp
+class Solution {
+public:
+    vector<int> sortedSquares(vector<int>& nums) {
+        int n = nums.size();
+        vector<int> ans(n);
+        int l = 0, r = n-1, cnt = n-1;
+        while(l <= r) {
+            if(abs(nums[l]) <= abs(nums[r])) {
+                ans[cnt--] = nums[r]*nums[r];
+                r--;
+            } else {
+                ans[cnt--] = nums[l]*nums[l];
+                l++;
+            }
+        }
+        return ans;
+    }
+};
+```
+
+
+
+```go
+class Solution {
+public:
+    vector<int> sortedSquares(vector<int>& nums) {
+        int n = nums.size();
+        vector<int> ans(n);
+        int l = 0, r = n-1, cnt = n-1;
+        while(l <= r) {
+            if(abs(nums[l]) <= abs(nums[r])) {
+                ans[cnt--] = nums[r]*nums[r];
+                r--;
+            } else {
+                ans[cnt--] = nums[l]*nums[l];
+                l++;
+            }
+        }
+        return ans;
+    }
+};
+```
+
+用双指针能够达到O(n)复杂度，考虑到数组是有序的，所以用双指针遍历一遍数组即可
+
+
+
+##  658.找到k个最接近的元素(双指针)
+
+```cpp
+class Solution {
+public:
+    vector<int> findClosestElements(vector<int>& arr, int k, int x) {
+        int r = lower_bound(arr.begin(), arr.end(), x)-arr.begin();
+        int l = r-1;
+        while(k--) {
+            if(l < 0) r++;  //全都大于等于x
+            else if(r >= arr.size()) l--;   //全都小于x
+            else if(x-arr[l] <= arr[r]-x) l--;
+            else r++;
+        }
+        return vector<int>(arr.begin()+l+1, arr.begin()+r);
+    }
+};
+```
+
+
+
+```go
+func findClosestElements(arr []int, k int, x int) []int {
+    r := sort.SearchInts(arr, x) //go的二分查找
+    l := r-1
+    for ; k > 0; k-- {
+        if l < 0 {
+            r++
+        } else if r >= len(arr) {
+            l--
+        } else if x-arr[l] <= arr[r]-x {
+            l--
+        } else {
+            r++
+        }
+    }
+    return [l+1 : r]
+}
+```
+
+这是一个从中间向两边的一个双指针，首先二分查找找到第一个大于等于x的下标，然后向两边扩展指针，最后返回的数组就是`a[l+1, r]`cpp的迭代器和go的切片是一样的，都是左闭右开的
+
+
+
+##  713.乘积小于k的子数组(滑动窗口)
+
+```cpp
+class Solution {
+public:
+    int numSubarrayProductLessThanK(vector<int>& nums, int k) {
+        long long sum = 1;
+        int l = 0, ans = 0;
+        for(int r = 0; r < nums.size(); r++) {
+            sum *= nums[r];
+            while(l <= r && sum >= k) sum /= nums[l++];
+            ans += r-l+1;
+        }
+        return ans;
+    }
+};
+```
+
+
+
+```go
+func numSubarrayProductLessThanK(nums []int, k int) int {
+    l, sum, ans := 0, 1, 0
+    for r, x := range nums {
+        sum *= x
+        for l <= r && sum >= k {
+            sum /= nums[l]
+            l++
+        }
+        ans += r-l+1
+    }
+    return ans
+}
+```
+
+滑动窗口求子数组个数，这个子数组个数的求法以前也是总结过了的，就是闭区间的[l,r]用r-l+1累加到ans中，就是最终的结果，表示以nums[r]结尾长度为r-l+1的子串的个数
 
 
 
@@ -2470,6 +2775,10 @@ vector<int> maxSlidingWindow(vector<int>& nums, int k) {
 
 
 
+总结：解决最长、最短子数组长度、子数组个数
+
+
+
 
 
 ###  遇事不决先排序
@@ -2497,3 +2806,39 @@ vector<int> maxSlidingWindow(vector<int>& nums, int k) {
 ###  正难则反
 
 这算是一个思考题目的策略吧，以1685为例，要求的是操作最小次数，问题可以转换成求和为target的最大子数组长度，然后用n减去这个长度就是最小操作次数。这种方法出现的情景可能比较少，主要是需要可行性的判断，在正面没有思路的时候就可以试试反面去想，也类似于遇事不决先排序吧，先判断一下是否能排序，如果能的话就先排序试试，说不定第一步就是需要排序的
+
+
+
+###  前缀和、差分数组
+
+好久没有写过前缀和、差分数组了，之所以写这一个总结单纯就是熟悉一下，最主要是在哪个平台写的题，这一次在牛客上遇到了月赛101中的D题，用到了前缀和+差分数组+差分数组再求一次前缀和。这也是和力扣刷的时候有点不同的地方，力扣好像还没有写过用数组将差分数组再求前缀和存储起来的题。然后就是最重要的下标问题，我认为好的解决办法就是拿第一个下标举例然后推
+
+
+
+###  判断平方数
+
+```cpp
+int tmp = sqrt(num);
+if(num == tmp*tmp) cout << "是平方数";
+else cout << "不是平方数";
+```
+
+
+
+
+
+###  双指针
+
+下标一定要写对，否则容易出现死循环
+
+
+
+###  字符串api
+
+- `slower(char c)` 是否为小写字母
+- `isupper(char c)` 是否为大写字母
+- `isdigit(char c)` 是否为数字
+- `isalpha(char c)` 是否为字母
+- `isalnum(char c)` 是否为字母或者数字
+- `toupper(char c)` 字母小转大
+- `tolower(char c)` 字母大转小
