--- a/练习赛合集.md
+++ b/练习赛合集.md
@@ -782,6 +782,62 @@ public:
 
 
 
+###  周赛416
+
+####  举报垃圾信息(哈希)
+
+```cpp
+class Solution {
+public:
+    bool reportSpam(vector<string>& message, vector<string>& bannedWords) {
+        int ans = 0;
+        unordered_map<string, int> cnt;
+        for(auto s : bannedWords) {
+            cnt[s]++;
+        }
+        for(auto s : message) {
+            if(cnt.count(s)) ans++;
+        }
+        return ans >= 2;
+    }
+};
+```
+
+看到这种重复、相同第一眼就要想到哈希
+
+
+
+
+
+####  统计重新排列后包含另一个字符串的子字符串数目I&II(滑动窗口)
+
+```CPP
+class Solution {
+public:
+    long long validSubstringCount(string word1, string word2) {
+        if(word1.length() < word2.length()) return 0;
+        int cnt[26]{};
+        for(char c : word2) cnt[c-'a']++;
+        int less = 0;
+        for(int ct : cnt) less += ct > 0;
+        long long ans = 0;
+        int l = 0;
+        for(char c : word1) {
+            less -= --cnt[c-'a'] == 0;
+            while(less == 0) less += cnt[word1[l++]-'a']++ == 0;
+            ans += l;
+        }
+        return ans;
+    }
+};
+```
+
+滑动窗口的题目，最近确实一直在刷滑动窗口的题目，但是这个问题类型还是没有见过的，求符合条件的子字符串个数，下面是灵神给出的结论，如果[l-1, r]是符合条件的子数组的话，那么l=0, 1 ... l-1都是符合条件的子数组，那么这一共有l个符合条件的子数组，这种情况就是累加`l`，另一种情况是l不断往右是符合条件的，那么ans累加的是`r-l+1`
+
+
+
+复盘：第一题ac很快，但是234题简直是灾难，硬是没有想出来怎么写，第二题的二分或者最小堆，其实有想过最小堆怎么写，但是问题出在了不知道怎么求时间上，然后二分答案的写法是题解都看不懂，或许下一站就是二分了，再就是堆，我感觉堆的题我做的还不够，做的都是些简单题。。。34题是一样的，而且还是考的滑动窗口，但是也是卡在了不熟悉上，已经分析出来O(26n)是不会超时的，但是不知道怎么写出来！累加ans上也是卡住了，但这好像也算在没有见过的类型上，这几天做的滑窗都是求最大/最小长度，稍微变一变还是做不出来了。。。这就是要提升自己的临场做题能力，万一有时候遇到的就是一个新题呢？你明明都知道用什么方法去写，但是卡在了过程中，这一点确实是需要锻炼的，题量多是多起来了，但是好像覆盖面其实并不是很广，做过的题不能顺利的ac。是不熟练吗？是记忆力不行吗？这是自己需要反思的。这一周各平台的练习赛效果都不是很好，不能做到和大部分人区分，感觉还是新手水平，就是新手能做的题我也能做，就是稍微上一点难度还是一样无法解决。给了我一点点的打击吧，不知道意义在哪，整的自己都有点丧了。。。
+
 
 
 
@@ -1337,6 +1393,129 @@ for(auto& i : a) cin >> i;
 
 
 看完题解只会这些了。。。这一次还好没打周赛吧，不然得掉分了。。。这一次感觉很数学！害！这数学真是个难点啊！首先是需要推导，然后还有组合数学什么之类的，这些都还没有系统刷过的。。。
+
+
+
+###  小白月赛101
+
+####  A.tb的区间问题(滑动窗口)
+
+```cpp
+void solve(){
+	int n, k;
+	cin >> n >> k;
+	if(n == k) {
+		cout << 0;
+		return; 
+	}
+	for(int i = 0; i < n; i++) cin >> a[i];
+	ll sum = 0, ans = 0;
+	int l = 0, sz = n-k;
+	for(int r = 0; r < n; r++) {
+		sum += a[r];
+		if(r-l+1 > sz) sum -= a[l++];
+		ans = max(ans, sum);
+	}
+	cout << ans;
+}
+```
+
+题解是用前缀和维护子数组和然后枚举子串求max，我这里是发现这和最近做的几个滑动窗口的题很像，所以就直接按照滑动窗口的板子来写了。唉这一题wa了两发我真的服了，wa的原因是没看清楚题。。。
+
+
+
+####  B.tb的字符串问题(栈)
+
+```cpp
+void solve(){
+    stack<char> st;
+    int n;
+    string s;
+    cin >> n;
+    cin >> s;
+    for(auto c : s) {
+        if(st.empty()) st.push(c);
+        else if(st.top() == 'f' && c == 'c') st.pop();
+        else if(st.top() == 't' && c == 'b') st.pop();
+        else st.push(c);
+    }
+    cout << st.size();
+}
+```
+
+判断出这个题是个栈模拟就好做了，也是算比较快的写完的，中间稍微卡了几分钟。。。
+
+
+
+####  C.tb的路径问题(打表、找规律)
+
+打表代码：
+
+```cpp
+int gcd(int x, int y) {
+	return y == 0 ? x : gcd(y, x%y);
+}
+
+void solve(){
+	for(int i = 1; i <= 10; i++) {
+		for(int j = 1; j <= 10; j++) {
+			cout << gcd(i, j) << " ";
+		}
+		cout << "\n";
+	}
+}
+```
+
+
+
+```cpp
+void solve(){
+	ll n;
+	cin >> n;
+	ll ans = 2*(n-1);
+	if(n%2 == 0) ans = min(ans, 4ll);
+	else if(n%2 == 1) ans = min(ans, 6ll);
+	cout << ans;
+}
+```
+
+做的时候真的有一点找规律的感觉，只能怪自己能力不够没发现！顺便回顾了一下gcd的写法。总的来说其实就是如果n是偶数，那么答案就是`min(2*(n-1), 4ll)`，如果n是奇数那么答案就是`min(2*(n-1), 6ll)`
+
+
+
+####  D.tb的平方问题(前缀和、差分数组、判断平方数)
+
+```cpp
+int nums[1010], prefix[1010], diff[1010], ans[1010];
+
+void solve(){
+	int n, q;
+	cin >> n >> q;
+	for(int i = 0; i < n; i++) {
+		cin >> nums[i];
+		prefix[i+1] = prefix[i]+nums[i];
+	}
+	
+	for(int i = 1; i <= n; i++) {
+		for(int j = 1; j <= n; j++) {
+			int t = sqrt(prefix[j]-prefix[i-1]);
+			if((prefix[j]-prefix[i-1]) == t*t) {
+				diff[i]++;
+				diff[j+1]--;
+			}
+		}
+	}
+	
+	for(int i = 1; i <= n; i++) ans[i] = ans[i-1]+diff[i];
+	while(q--) {
+		int d;
+		cin >> d;
+		cout << ans[d] << "\n";
+	}
+}
+```
+
+这一题差在什么地方呢？---差分数组和平方数的判断，差分数组是没有想到的，而平方数的判断是没有遇到过的，对于前缀和的使用在比赛中还是写对了，只不过写的有点慢，时间久了可以理解。为什么用到差分数组呢？之前总结过，当遇到区间覆盖问题就用差分，这里也是枚举区间，看到数据范围n在1e3以内，所以两层for循环是不会超时的，再加上前面前缀和的求和预处理，这样就可以枚举所有区间的前缀和了。还有就是前缀和、差分数组的下标对应问题，我感觉牛客和力扣给的数组有时是不一样的，牛客有时候会出现下标从1开始输入，在写题的过程中我感觉最好的办法就是从特例开始想，就比如从第一个数开始想
 
 
 
