蓝桥算法季度赛4复盘

--- a/练习赛合集.md
+++ b/练习赛合集.md
@@ -1573,3 +1573,136 @@ void solve(){
 ```
 
 还是要细心去找规律啊，感觉是想复杂了，想着肯定是用什么高级算法之类的东西才能去解这个题，也算是总结经验了，蓝桥更看重考一点数学和规律的感觉，从一般到共性吧
+
+
+
+###  算法季度赛4
+
+####  2.全栈项目小组(哈希)
+
+```cpp
+void solve() {
+	unordered_map<int, pair<int, int>> cnt;
+	int n;
+	cin >> n;
+	while(n--) {
+		int s;
+		char p;
+		cin >> s >> p;
+		if(p == 'F') cnt[s].first++;
+		else cnt[s].second++;
+	}
+	
+	int ans = 0;
+	for(auto [_, val] : cnt) {
+		ans += min(val.first, val.second);
+	}
+	cout << ans;
+}
+```
+
+感觉还是对哈希的使用不是很灵活，想到了要用pair在key上，但是没想到pair用到value上，由于value只包含两种结果，就正好对应上了pair的first和second
+
+
+
+
+
+####  3.你会二分吗？
+
+```cpp
+void solve() {
+	int n;
+	cin >> n;
+	vector<ll> a(n), b(n);
+	for(auto& ai : a) cin >> ai;
+	for(auto& bi : b) cin >> bi;
+	sort(a.begin(), a.end());
+	sort(b.begin(), b.end(), greater<ll>());
+	//降序排序也能写成sort(b.rbegin(), b.rend());
+	ll ans = a[0]+b[0];
+	for(int i = 1; i < n; i++) ans = min(ans, a[i]+b[i]);
+	cout << ans; 
+}
+```
+
+看似是二分，然后就被套进去了，其实就是a数组升序排序，b数组降序排序就行了，这种情况一定是最优的情况。关键是读懂这个题目的意思吧，只有当最小的ai和最大的bi搭配的时候他们才能最大的值，以此类推第二小的ai和第二大的bi组合，最后求出组合后的最小值即可。其实稍微考点思维和贪心吧，长见识了
+
+
+
+####  4.扫把扶不扶？(模拟)
+
+```cpp
+void solve() {
+	int n;
+	cin >> n;
+	auto trans = [&]() {
+		string s;
+		cin >> s;
+		return stoi(s.substr(0, 2))*3600+stoi(s.substr(3, 2))*60+stoi(s.substr(6, 2));
+	}; 
+	for(int i = 0; i < n; i++) {
+		int s1 = trans(), s2 = trans(), s3 = trans(), s4 = trans();
+		int t, x;
+		cin >> t >> x;
+		t *= 60;
+		x *= 60;
+		if(s2 < s1) {
+			if(s4 < s3) cout << "Draw" << "\n";	//你和蓝都没到 
+			else cout << "Lan" << "\n";	//你没到 蓝到了 
+		} else if(s4 < s3) {
+			cout << "You" << "\n";	//你到了 蓝没到 
+		} else if(s2-s1 >= x) {	//你扶了扫把 
+			cout << "You" << "\n";
+		} else if(s2+t > s4) {	//你面试结束后时间超过了蓝的面试时间 
+			cout << "You" << "\n";
+		} else {	//其它情况都是蓝 
+			cout << "Lan" << "\n";
+		}
+	}
+}
+```
+
+模拟题，挺复杂的讨论，但是也是学到了新解法，就是遇到这种时间类型的题目，而且又有时间先后的问题可以先把这个复杂的时间转化成秒，先统一单位，这样就很好比较了，这是一个很重要的简化代码方式。然后就是复杂的分类讨论，这确实没什么好说的，就是要细心讨论，这个感觉就是靠你思维逻辑严谨不严谨，虽然分类讨论想起来有点恶心，但觉得是一个好题！
+
+
+
+####  5.水杯考验
+
+```cpp
+void solve() {
+	unordered_map<int, int> hash;
+	int n;
+	cin >> n;
+	for(int i = 0; i < n; i++) {
+		int a;
+		cin >> a;
+		hash[a]++;
+	}
+	
+	if(hash.size() == 1 || hash.size() == n) cout << hash.size();
+	else cout << n-1;
+}
+```
+
+cao！就是结论题！尼玛我其实也往那一块去想了，上周是有点背还是怎么的，其实思考方向都是像的，就是想不对？！状态太差了，太浮躁了！就是三种情况
+
+
+
+####  6.面试官的刁难
+
+```cpp
+void solve() {
+	ll n;
+	cin >> n;
+	int ans = 1;
+	ll t = 45*n;
+	for(; t > 0; t /= 10) ans += t%10;
+	cout << ans << "\n";
+}
+```
+
+比赛的时候一眼以为是数位dp，真尼玛蠢啊，dp怎么能过这种数据啊？这就有点像找规律题了，拿n=3为例，那么就表示1-999，可以发现1，2，3...,9都出现了100次，然后发现规律每个数字出现10^n-1次 ，然后最后要加上1，这就是为什么ans要初始化成1的原因，这里也是见识到了一个算数位和的一个新写法了~
+
+
+
+总结：这场比较偏思维，题意有点误导人的意思，感觉属于是高中那种做易错题的感觉，题干就是让你往它设计的坑上跳，比较像周赛前三题的感觉，很多需要技巧或者猜的思想，这一点其实也挺重要的。
