--- a/9月刷题笔记.md
+++ b/9月刷题笔记.md
@@ -2690,6 +2690,131 @@ func numSubarrayProductLessThanK(nums []int, k int) int {
 
 
 
+##  1014.最佳观景点(枚举右、维护左)
+
+```cpp
+class Solution {
+public:
+    int maxScoreSightseeingPair(vector<int>& values) {
+        int mx = values[0], ans = 0;
+        for(int i = 1; i < values.size(); i++) {
+            ans = max(ans, mx+values[i]-i);
+            mx = max(mx, values[i]+i);
+        }
+        return ans;
+    }
+};
+```
+
+
+
+```go
+func maxScoreSightseeingPair(values []int) int {
+    ans, mx := 0, values[0]
+    for i := 1; i < len(values); i++ {
+        ans = max(ans, mx+values[i]-i)
+        mx = max(mx, values[i]+i)
+    }
+    return ans
+}
+```
+
+顺利ac，做过的题了，一眼就发现了枚举右、维护左！
+
+
+
+##  2207.字符串中最多数目的子序列(贪心)
+
+```cpp
+class Solution {
+public:
+    long long maximumSubsequenceCount(string text, string pattern) {
+        int cntx = 0, cnty = 0;
+        long long ans = 0;
+        char x = pattern[0], y = pattern[1];
+        for(char t : text) {
+            if(t == y) {
+                ans += cntx;
+                cnty++;
+            } 
+            if(t == x) cntx++;
+        }
+        ans = ans+max(cntx, cnty);
+        return ans;
+    }
+};
+```
+
+
+
+```go
+func maximumSubsequenceCount(text string, pattern string) int64 {
+    cntx, cnty, ans := 0, 0, int64(0)
+    x, y := pattern[0], pattern[1]
+    for i := range text {
+        c := text[i]
+        if c == y {
+            ans += int64(cntx)
+            cnty++
+        }
+        if c == x {
+            cntx++
+        }
+    }
+    return ans + int64(max(cntx, cnty))
+}
+```
+
+首先拿到这个题判断用dp做，思考了一下发现不太好想递推关系，结果是贪心！看似patterm的两个字符可以插入text的任意一个位置，但实际上要求符合条件的最多子序列个数就应该选一个插入最前或者最后的位置，这样才能保证数目最多，然后就是这个数目的计算上，感觉有点像枚举右维护左的思维，然后就是循环体内，代码中没有对pattern中字符相等做出特例的判断，所以一定要先判断字符y，累加答案之后再判断x。再就是自己写`unordered_map`中出现的错误，也是当x和y相等的时候，哈希表`cnt[x]`和`cnt[y]`其实表示的是同一个键值对，当时看了好久没看出来
+
+
+
+##  2962.统计最大元素出现至少k次的数组(滑动窗口)
+
+```cpp
+class Solution {
+public:
+    long long countSubarrays(vector<int>& nums, int k) {
+        long long ans = 0;
+        int l = 0;
+        int mx = ranges::max(nums);
+        int cnt = 0;
+        for(int x : nums) {
+            cnt += x == mx;
+            while(cnt == k) cnt -= nums[l++] == mx;
+            ans += l;
+        }
+        return ans;
+    }
+};
+```
+
+
+
+```go
+func countSubarrays(nums []int, k int) int64 {
+    mx := slices.Max(nums)
+    cnt, ans, l := 0, int64(0), 0
+    for _, x := range nums {
+        if x == mx {
+            cnt++
+        }
+        for cnt == k {
+            if nums[l] == mx {
+                cnt--
+            }
+            l++
+        }
+        ans += int64(l)
+    }
+    return ans
+}
+```
+
+巩固周赛遇到的题型，滑动窗口求符合条件的子数组个数，越长越合法，一般是`ans+=l`来计算符合条件的子数组个数
+
+
+
 
 
 
@@ -2842,3 +2967,31 @@ else cout << "不是平方数";
 - `isalnum(char c)` 是否为字母或者数字
 - `toupper(char c)` 字母小转大
 - `tolower(char c)` 字母大转小
+
+
+
+###  字符串时间的问题如何简化？---转化为秒
+
+拿蓝桥算法季度赛4为例，第四题出现了一个较为复杂了判断时间先后的问题，输入的时候给出的时间样式大致为`HH:MM:SS`这种字符串的格式。这里的办法是先统一单位，将单位全部向小的转移，这可以在函数外实现，也可以用lambda表达式来实现。这样在输入之后直接都统一成了int类型了，这样会简化代码很多！
+
+
+
+###  数位之和两种写法---循环、字符串
+
+```cpp
+//写法一：
+int target = 3487568927346, ans = 0;
+for(int t = target; t > 0; t /= 10) ans += target%10;
+
+//写法二：
+int target = 3487568927346, ans = 0;
+string s = to_string(target);
+for(char c : s) ans += c-'0';
+```
+
+
+
+
+
+
+
