--- a/9月刷题笔记.md
+++ b/9月刷题笔记.md
@@ -2815,6 +2815,100 @@ func countSubarrays(nums []int, k int) int64 {
 
 
 
+##  2799.统计完全子数组的数目(滑动窗口)
+
+```cpp
+class Solution {
+public:
+    int countCompleteSubarrays(vector<int>& nums) {
+        unordered_set<int> st(nums.begin(), nums.end());
+        int k = st.size();
+        unordered_map<int, int> cnt;
+        int l = 0, r = 0, ans = 0;
+        for(int x : nums) {
+            cnt[x]++;
+            while(cnt.size() >= k) {
+                int out = nums[l];
+                if(--cnt[out] == 0) cnt.erase(out);
+                l++;
+            }
+            ans += l;
+        }
+        return ans;
+    }
+};
+```
+
+还是越长越合法的类型的题目
+
+
+
+##  2302.统计得分小于k的子数组数目(滑动窗口)
+
+```cpp
+class Solution {
+public:
+    long long countSubarrays(vector<int>& nums, long long k) {
+        long long sum = 0, ans = 0;
+        int l = 0;
+        for(int r = 0; r < nums.size(); r++) {
+            sum += nums[r];
+            while(sum*(r-l+1) >= k) sum -= nums[l++];
+            ans += r-l+1;
+        }
+        return ans;
+    }
+};
+```
+
+
+
+```go
+func countSubarrays(nums []int, k int64) int64 {
+    sum, ans := int64(0), int64(0)
+    l := 0
+    for r, x := range nums {
+        sum += int64(x)
+        for sum*int64(r-l+1) >= k {
+            sum -= int64(nums[l])
+            l++
+        }
+        ans += int64(r-l+1)
+    }
+    return ans
+}
+```
+
+这是滑动窗口求子数组长度的另一种题型了，属于是越短越合法，这样ans累加的答案是`ans+=r-l+1`，有点不同的是这一题需要一个前缀和数组来维护前缀和，这个题的意思也是很明确需要前缀和，但是题解给出的是动态维护前缀和，这样写法更简洁。前缀和分为预处理前缀和与动态维护前缀和，有时候某种题型只能用动态来维护前缀和，这也是因题而异
+
+
+
+##  2762.不间断子数组(滑动窗口)
+
+```cpp
+class Solution {
+public:
+    long long continuousSubarrays(vector<int>& nums) {
+        map<int, int> cnt;
+        long long ans = 0;
+        int l = 0;
+        for(int r = 0; r < nums.size(); r++) {
+            cnt[nums[r]]++;
+            while(cnt.rbegin()->first-cnt.begin()->first > 2) {
+                int out = nums[l++];
+                if(--cnt[out] == 0) cnt.erase(out);
+            }
+            ans += r-l+1;
+        }
+        return ans;
+    }
+};
+```
+
+滑动窗口和哈希表的新应用，这里用的哈希表是map类型的，之前总结过，map和unordered_map的区别就是map保存数据之后是有序的而unordered_map保存数据之后不是有序的。在这一题中，一定是得保证这个子数组最大元素和最小元素之差要小于等于2.然后就是如何找到最后一个元素呢？这里不是用的`.back()`函数，这里用的是`r.begin()`迭代器，也就是记住吧留个映像，主要是map确实没怎么用过。然后其它的地方和越短越合法是一个步骤，`ans+=r-l+1`
+
+
+
 
 
 
